__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>March 7, 2009</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp.  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>February 9, 2009</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp.  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>October 10, 2008</dt>
<dd>Version 3.0.3 has been released and is now available for ftp.
Octave 3.0.3 is a bug-fixing release.  Most bugs reported since the
release of version 3.0.2 have been fixed.
Please note that Octave 3.0 is significantly different from Octave
2.1.x, particularly with regard to graphics, path handling, and
built-in variables.  Please read the __OCTAVE_HTTP__(`NEWS-3.html',
`NEWS') file.</dd>
<dt>August 14, 2008</dt>
<dd>Version 3.0.2 has been released and is now available for ftp.
Octave 3.0.2 is a bug-fixing release.  Most bugs reported since the
release of version 3.0.1 have been fixed.
Please note that Octave 3.0 is significantly different from Octave
2.1.x, particularly with regard to graphics, path handling, and
built-in variables.  Please read the __OCTAVE_HTTP__(`NEWS-3.html',
`NEWS') file.</dd>
<dt>April 21, 2008</dt>
<dd>Version 3.0.1 has been released and is now available for ftp.
Octave 3.0.1 is a bug-fixing release.  Most bugs reported since the
release of version 3.0.0 have been fixed.
Please note that Octave 3.0 is significantly different from Octave
2.1.x, particularly with regard to graphics, path handling, and
built-in variables.  Please read the __OCTAVE_HTTP__(`NEWS-3.html',
`NEWS') file.</dd>
<dt>December 21, 2007</dt>
<dd>Version 3.0.0 has been released and is now available for ftp.
Please note that Octave 3.0 is significantly different from Octave