@@ -45,9 +45,14 @@ with Matlab. It may also be used as a batch-oriented language.</p>
 <h2>Current News</h2>
 
 <dl>
+<dt>March 26, 2009</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp (3.1.55).  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
 <dt>March 7, 2009</dt>
 <dd>A new snapshot of the current development version of Octave is
-available for ftp.  You should only be using this version if you are
+available for ftp (3.1.54).  You should only be using this version if you are
 interested in testing the latest features and don't mind hitting the
 occasional bug.</dd>
 <dt>February 9, 2009</dt>
