@@ -2,9 +2,14 @@ __HEADER__(`Octave News Archive')
 
 <div class="section">
 <dl>
+<dt>March 26, 2009</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp (3.1.55).  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
 <dt>March 7, 2009</dt>
 <dd>A new snapshot of the current development version of Octave is
-available for ftp.  You should only be using this version if you are
+available for ftp (3.1.54).  You should only be using this version if you are
 interested in testing the latest features and don't mind hitting the
 occasional bug.</dd>
 <dt>February 9, 2009</dt>
